[project]
name = "koreckto-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "AGPL-3.0" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
test = ["pytest>=8.3.4", "pytest-cov>=6.0.0"]
lint = ["ruff>=0.8.3"]
all = [{ include-group = "test" }, { include-group = "lint" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff #
[tool.ruff]
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "D",     # pydocstyle
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
    "TC",    # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]
ignore = [
    "D104",   # undocumented-public-package
    "D105",   # undocumented-magic-method
    "D415",   # ends-in-punctuation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.pydocstyle]
convention = "google"
