[project]
name = "koreckto-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "AGPL-3.0" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = ["pytest>=9.0.0", "pytest-cov>=7.0.0"]
lint = ["ruff>=0.15.1"]
all = [{ include-group = "test" }, { include-group = "lint" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mainproject"]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "D",     # pydocstyle
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FURB",  # refurb
    "I",     # isort
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "TC",    # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]
ignore = [
    "D104",   # undocumented-public-package
    "D105",   # undocumented-magic-method
    "D415",   # ends-in-punctuation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
]
extend-safe-fixes = [
    "UP046", # non-pep695-generic-class
    "UP047", # non-pep695-generic-function
    "W291",  # trailing-whitespace
    "W293",  # blank-line-with-whitespace
]

[tool.ruff.lint.isort]
extra-standard-library = ["_typeshed", "typing_extensions"]

[tool.ruff.lint.pydocstyle]
convention = "google"
